--- a/anime-omake.html
+++ b/anime-omake.html
@@ -166,7 +166,7 @@
         <!-- Logo -->
         <div class="art-sub-header">
             <h2>Logo</h2>
-            <p>There was no title yet and not set direction on how it should look besides being yellow or purple so I played with lots of different styles using "Anime Show" as a placeholder.  After the first round, the stakeholders wanted to see more of the 'ribbon' look.</p>
+            <p>At the time of making these, there was no title yet and not set direction on how it should look besides being yellow or purple so I played with lots of different styles using "Anime Show" as a placeholder.  After the first round, the stakeholders wanted to see more of the 'ribbon' look.</p>
           </div>
           <div class="full-image">
             <img src="img/ao-logo1.png">
