--- a/suitingup.html
+++ b/suitingup.html
@@ -53,7 +53,7 @@
     <div class="art-section">
         <div class="art-sub-header">
             <h2>Suiting Up</h2>
-          <p>Animated and designed video graphics for IGN's <i>Suiting Up</i>, a 4 episode miniseries centered around EA and Bioware's multiplayer action RPG game Anthem.</p>
+          <p>Animated and designed video graphics for IGN's <b>Suiting Up</b>, a 4 episode miniseries centered around EA and Bioware's multiplayer action RPG game Anthem.</p>
           <br>  
           <p>Watch the first episode below:</p>
         </div>
@@ -71,19 +71,21 @@
       <div class="art-display">
         <!-- Row 1 -->
         <div class="art-sub-header">
-          <p>Since the client did not have any creative direction at the start of the project, the Sales Design and Video team decided to try out two different looks to present to the client: <b>A)</b> a mechanical, gritty, weathered down look <b>B)</b> a look inspired by futuristic HUD elements/interface.  I was tasked with the futuristic interface look.</p>
+          <p>Since the client did not have any creative direction at the start of the project, the IGN Sales Design and Video team decided to try out two different looks to present to the client: <b>A)</b> a mechanical, gritty, weathered down look <b>B)</b> a look inspired by futuristic HUD elements/interface.  I was tasked with the futuristic interface look.</p>
           <br>
-          <p>Below are first drafts exploring a logo for the show. </p><br>
+          <p>Below are first drafts exploring a logo for the show.  I started off with something bold and techy while using visual elements taken from Anthem's javelins just to get a feel for what direction I wanted with the logo. I then trailed off to thinner fonts that would compliment a HUD interface more without overpowering it. </p><br>
         </div>
         <div class="full-image loading-icon">
           <img src="https://i.imgur.com/Nl876Vf.png">
         </div>
         <!-- Row 2 -->
         <div class="art-sub-header">
-          <p>Creating the HUD interface and seeing how it looked with the logo explorations.</p>
+          <p>Creating the HUD interface and seeing how it looked with the logo explorations  I referenced reticles, FPS video game UI, and Anthem's gameplay UI.</p>
         </div>
         <div class="full-image loading-icon">
           <img src="https://i.imgur.com/JnVCCdh.png">
+        </div>
+          <div class="full-image loading-icon">
           <img src="https://i.imgur.com/IFniawt.png">
         </div>
         <!-- Row 3 -->
@@ -91,11 +93,66 @@
           <p>Color change to match Anthem's orange more.</p>
         </div>
         <div class="full-image loading-icon">
-          <img src="https://puu.sh/C8eqb.gif">
+          <img src="https://i.imgur.com/0vhWQlf.png">
         </div>
+         <!-- Row 4 -->
+         <div class="art-sub-header">
+          <p>Upon review, the client came back with that they wanted the show to be branded more as Anthem rather than an IGN show with its own branding.  Below is how the intro turned out using Anthem's pink/orange gradient with my HUD interface. Includes the animated version with an editable episode slate for Video team's use.</p>
+        </div>
+        <div class="full-image loading-icon">
+          <img src="https://i.imgur.com/mdRDZaZ.jpg">
+        </div>
+        <iframe width="1000" height="563" src="https://www.youtube.com/embed/2rzvc4C5Al4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <hr>
     </div>
+
+    <div class="art-section">
+      <h2>Other Video Graphics</h2>
+    <div class="art-display">
+      <!-- Row 1 -->
+      <div class="art-sub-header">
+        <p>Next I designed two lower thirds that the client could select which version they liked best. </p><br>
+      </div>
+      <div class="full-image loading-icon">
+        <img src="https://i.imgur.com/tCqC3mC.png">
+      </div>
+      <div class="full-image loading-icon">
+        <img src="https://i.imgur.com/pt5qFRs.png">
+      </div>
+      <div class="art-sub-header">
+        <p>Upon the same review as with the logo/title scene, the client wanted Anthem's pink/orange gradient over the designs I came up with.</p>
+      </div>
+      <div class="full-image loading-icon">
+        <img src="https://i.imgur.com/WDFiwSq.png">
+      </div>
+      <div class="full-image loading-icon">
+        <img src="https://i.imgur.com/UXV7NKl.png">
+      </div>
+      <p>Animated versions that were templatized for Video team's use.</p>
+      <div class="full-image loading-icon">
+        <img src="https://media.giphy.com/media/K5Lby5SUe5i2DNgs75/source.gif">
+      </div>
+      <div class="full-image loading-icon">
+        <img src="https://media.giphy.com/media/Wx04Fg5Xl34lNe3G8F/source.gif">
+      </div>
+      <!-- Row 2 -->
+      <div class="art-sub-header">
+        <p>First static transition draft I designed based on HUDs and reticles.</p>
+      </div>
+      <div class="full-image loading-icon">
+        <img src="https://i.imgur.com/vHzzhu4.jpg">
+      </div>
+      <div class="art-sub-header">
+        <p>As with the other explorations, during a review the client wanted the pink/orange gradient and triangles instead of circles to match the triangles in Anthem's own transitions.</p>
+      </div>
+      <div class="full-image loading-icon">
+        <img src="https://i.imgur.com/EkD4iFQ.png">
+      </div>
+    </div>
+    <hr>
+  </div>
+
   </div>
 
 </body>
