--- a/index.html
+++ b/index.html
@@ -63,17 +63,23 @@
       </a>
     </div>
     <div class="item">
-      <a href="youtube.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/uWzSBA7D39pNAl9LEU/giphy.gif" alt="youtube commissions"></div>
-        <span>YouTube Gaming Commissions</span>
+      <a href="anime-omake.html">
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/3htJqNlP6Ym6LOU2AT/giphy.gif" alt="anime omake"></div>
+        <span>Anime Omake - IGN Video Series</span>
       </a>
     </div>
 
     <!-- Row 2 -->
     <div class="item">
-      <a href="anime-omake.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/3htJqNlP6Ym6LOU2AT/giphy.gif" alt="anime omake"></div>
-        <span>Anime Omake - IGN Series</span>
+      <a href="suiting-up.html">
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/fxgVwHWTuYQKLC3zCI/source.gif" alt="suiting up"></div>
+        <span>Suiting Up - IGN Video Series</span>
+      </a>
+    </div>
+    <div class="item">
+      <a href="youtube.html">
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/uWzSBA7D39pNAl9LEU/giphy.gif" alt="youtube commissions"></div>
+        <span>YouTube Gaming Commissions</span>
       </a>
     </div>
     <div class="item">
@@ -82,18 +88,18 @@
           <span>Advertisements for IGN</span>
         </a>
       </div>
-    <div class="item">
-      <a href="roadblock.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/6w3ByAo8ewzUm1wPOx/giphy.gif" alt="e3 booth monitors"></div>
-        <span>IGN Homepage Roadblocks</span>
-      </a>
-    </div>
 
      <!-- Row 3 -->
      <div class="item">
       <a href="manga.html">
         <div class="image-container loading-icon"><img src="https://media.giphy.com/media/DCWHrUm3WEGpNWN0RO/giphy.gif" alt="motion manga"></div>
         <span>Motion Manga, Art, and GIFs (for fun!)</span>
+      </a>
+    </div>
+    <div class="item">
+      <a href="roadblock.html">
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/6w3ByAo8ewzUm1wPOx/giphy.gif" alt="e3 booth monitors"></div>
+        <span>IGN Homepage Roadblocks</span>
       </a>
     </div>
     <div class="item">
