--- a/about.html
+++ b/about.html
@@ -32,32 +32,32 @@
 <body>
   <div id="header">
     <div id="logo">
-      <h1><a href="/">Kathleen Oum</a></h1>
+      <h1><a href="index.html">Kathleen Oum</a></h1>
       <h2>Graphic &amp; Motion Design</h2>
     </div>
     <div id="menu">
       <div id="menu-hamburger" class="menu-closed">
         <img src="img/bar_menu.svg" alt="menu">
       </div>
-      <nav id="menu-links">
-        <span><a href="/">Portfolio</a></span>
-        <span><a target="_blank" href="https://drive.google.com/file/d/1irmmwqjdb_iXT6rve7aoKs-2bKsjp2nm/view">Resume</a></span>
+      <div id="menu-links">
+        <span><a href="index.html">Portfolio</a></span>
+        <span><a target="_blank" href="https://puu.sh/Btl8B/182ae937c6.pdf">Resume</a></span>
         <span><a class="active-link" href="about.html">About</a></span>
         <span><a href="contact.html">Contact</a></span>
-      </nav>
+      </div>
     </div>
   </div>
 
   <div id="content">
     <div id="about-content">
-      <div><img src="img/about.png"></div>
       <div>
-        <h2>Hello, I'm Kathleen!</h2>
-        <p>I'm a multidisciplinary designer based in San Francisco with a love for art, animation, video games, and anime.
-          I have experience in motion design, graphic design, advertisement, vectors, branding, and post-production with room to grow into new areas (I love variety!).</p>
-        <p>Outside of my job, I do remote work for clients ranging from YouTube gaming intros/outros, Twitch graphics, educational PSAs, logos, graphics for social channels, animated art, and videos.
-          If it's in my skill range, I'll take it on!</p>
-        <p>In my free time, you can find me <s>staring at Reddit all day</s> being productive on <a class="active-link" target="_blank" href="https://dribbble.com/kaeveeoh">Dribbble</a> and <a class="active-link" target="_blank" href="https://kaeveeoh-art.tumblr.com/">Tumblr</a>.</p>
+        <img src="img/about.png">
+      </div>
+      <div>
+          <h2>Hello, I'm Kathleen!</h2>
+          <p>I'm a multidisciplinary designer and 2D animator based in San Francisco with a love for art, animation, video games, and anime. I have experience in motion design, graphic design, advertisement, and custom graphics packages for video with room to grow into new areas.  I love exploring ways design and art can connect brands with users and communities, as well as how it shapes our experiences with messages.</p>
+          <p>Outside of the office, I do remote work for clients ranging from YouTube gaming intros/outros, Twitch graphics, educational PSAs, logos, animated art, and videos. If it's in my skill range, I'll take it on!</p>
+          <p>In my free time, you can find me <s>staring at Reddit all day</s> on <a class="active-link" target="_blank" href="https://dribbble.com/kaeveeoh">Dribbble</a> and <a class="active-link" target="_blank" href="https://kaeveeoh-art.tumblr.com/">Tumblr</a> dabbling in vector art and animation.</p>
       </div>
     </div>
   </div>
