--- a/vector.html
+++ b/vector.html
@@ -99,6 +99,13 @@
         <div class="half-image loading-icon">
           <img src="https://cdn.dribbble.com/users/808936/screenshots/3218057/1.gif">
         </div>
+        <!-- Row 6.5 -->
+        <div class="half-image loading-icon">
+          <img src="https://cdn.dribbble.com/users/808936/screenshots/5679149/calcifer-dribbble.png">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://cdn.dribbble.com/users/808936/screenshots/6135052/cactus-for-dribbble_1_.gif">
+        </div>
         <!-- Row 7 -->
         <div class="half-image loading-icon">
           <img src="https://78.media.tumblr.com/1621ff9d09491278c02f8f1b1db8b28a/tumblr_o0vftjMz6J1tmp8rdo1_540.gif">
