--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
       </div>
       <div id="contact-intro">
         <h2>Wanna chat?</h2>
-        <p>Feel free to fill out the contact form, e-mail me at <a class="active-link" href="mailto:kathleeon.oum@gmail.com">kathleeon.oum@gmail.com</a>, or message me through my social media.</p>
+        <p>Feel free to fill out the contact form, e-mail me at <a class="active-link" href="mailto:kathleen.oum@gmail.com">kathleen.oum@gmail.com</a>, or message me through my social media.</p>
       </div>
       <div id="contact-social">
         <h2>Connect</h2>
