--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
           <h2>Hello, I'm Kathleen!</h2>
           <p>I'm a multidisciplinary designer and 2D animator based in San Francisco with a love for art, animation, video games, and anime. I have experience in motion design, graphic design, advertisement, and custom graphics packages for video with room to grow into new areas.  I love exploring ways design and art can connect brands with users and communities, as well as how it shapes our experiences with messages.</p>
           <p>Outside of the office, I do remote work for clients ranging from YouTube gaming intros/outros, Twitch graphics, educational PSAs, logos, animated art, and videos. If it's in my skill range, I'll take it on!</p>
-          <p>In my free time, you can find me <s>staring at Reddit all day</s> on <a class="active-link" target="_blank" href="https://dribbble.com/kaeveeoh">Dribbble</a> and <a class="active-link" target="_blank" href="https://kaeveeoh-art.tumblr.com/">Tumblr</a> dabbling in vector art and animation.</p>
+          <p>In my free time, you can find me <s>staring at Reddit all day</s> dabbling on <a class="active-link" target="_blank" href="https://dribbble.com/kaeveeoh">Dribbble</a> and <a class="active-link" target="_blank" href="https://kaeveeoh-art.tumblr.com/">Tumblr</a> </p>
       </div>
     </div>
   </div>
