--- a/miniscroller.html
+++ b/miniscroller.html
@@ -54,7 +54,7 @@
       <div class="art-header">
         <h2>IGN - Miniscrollers</h2>
         <p>Miniscrollers are sponsored mobile units that animate as a user scrolls down their phone on the IGN website.  These are made using Photoshop for the design and editing of assets and then animated and built out in Celtra.  Clients, such as Best Buy, sometimes design their own and IGN builds it out.</p><br>
-        <p>Click on the images below to view the animation.</p>
+        <p>Click on the images below to view the animation.  Please disable any ad blockers.</p>
       </div>
       <div class="art-display">
         <div class="quarter-image loading-icon">
