--- a/manga.html
+++ b/manga.html
@@ -213,7 +213,7 @@
 
 
         <div class="art-header">
-          <p>I also took the first 15 seconds of the <a class="active-link" target="_blank" href="https://www.youtube.com/watch?v=_ty-Nqm4Pdc">Bleach season 1 opening</a> and did a crossover with Tokyo Ghoul.</p>
+          <p>I also took the first 15 seconds of the <a class="active-link" target="_blank" href="https://www.youtube.com/watch?v=_ty-Nqm4Pdc">Bleach season 1 opening</a> and did a crossover with Tokyo Ghoul, re-creating the animation as close as possible. </p>
         </div>
         <div class="art-display">
           <div class="half-image">
