--- a/vector.html
+++ b/vector.html
@@ -53,7 +53,7 @@
     <div class="art-section">
       <div class="art-header">
         <h2>Vector Art</h2>
-        <p>Some of the static and animated vector art I have done from 2017 to now.</p>
+        <p>Static and animated vector art mainly inspired by video games and anime.</p>
         <p>Details and more can be found on my <a class="active-link" target="_blank" href="https://dribbble.com/kaeveeoh">Dribbble page</a>.</p>
       </div>
       <div class="art-display">
