--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
   <div id="content">
     <div id="about-content">
       <div>
-        <img src="img/about.png">
+        <img src="https://media.giphy.com/media/xlcPfxD3sM9ZxPKYKK/source.gif">
       </div>
       <div>
           <h2>Hello, I'm Kathleen!</h2>
