--- a/anime-omake.html
+++ b/anime-omake.html
@@ -52,7 +52,6 @@
     <!-- Section 1 -->
     <div class="art-section">
       <div class="art-header">
-        <h2>ANIME OMAKE</h2>
       </div>
       <div class="art-display">
         <!-- Row 1 -->
@@ -62,7 +61,10 @@
         <!-- Row 2 -->
         <div class="art-sub-header">
           <p>Designed and animated all graphics related to the IGN miniseries <a class="active-link" target="_blank" href="https://www.ign.com/watch/anime-omake">Anime Omake</a>, a series focused on discussing and recommending the latest and greatest anime.</p>
-          <br>  
+          <p>-</p>
+          <p>Art direction: Gian Cruz</p>
+          <p>Design and animation: Kathleen Oum</p>
+          <p>-</p>
           <p>Watch an episode below:</p>
         </div>
         <div class="full-image loading-icon">
