--- a/behind-the-cosplay.html
+++ b/behind-the-cosplay.html
@@ -52,7 +52,6 @@
     <!-- Section 1 -->
     <div class="art-section">
       <div class="art-header">
-        <h2>Behind the Cosplay</h2>
       </div>
       <div class="art-display">
         <!-- Row 1 -->
@@ -62,7 +61,10 @@
         <!-- Row 2 -->
         <div class="art-sub-header">
           <p>Animated and designed video graphics for IGN's <a class="active-link" target="_blank" href="https://www.ign.com/watch/behind-the-cosplay">Behind the Cosplay</a> mini-documentary series centered around cosplaying Iden Versio, the protagonist of Star Wars: Battlefront II.</p>
-          <br>  
+          <p>-</p>
+          <p>Logo design: Matt Kruse</p>
+          <p>Animation and video graphics: Kathleen Oum</p>
+          <p>-</p>
           <p>Watch the first episode below:</p>
         </div>
         <div class="full-image loading-icon">
