--- a/suiting-up.html
+++ b/suiting-up.html
@@ -54,7 +54,10 @@
         <div class="art-sub-header">
             <h2>Suiting Up</h2>
           <p>Animated and designed video graphics for IGN's <b>Suiting Up</b>, a 4 episode miniseries centered around EA and Bioware's multiplayer action RPG game Anthem.</p>
-          <br>  
+          <p>-</p>
+          <p>Art direction: Gian Cruz</p>
+          <p>Design and animation: Kathleen Oum</p>
+          <p>-</p>
           <p>Watch the first episode below:</p>
         </div>
         <div class="full-image loading-icon">
