--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -57,6 +57,7 @@
           <p>-</p>
           <p>Logo design and art direction: Justin Vachon</p>
           <p>Animation and video graphics: Kathleen Oum</p>
+          <p>Animation support: Jack Taylor</p>
           <p>-</p>
           <p>Watch an episode below:</p>
         </div>
