--- a/toy-temple.html
+++ b/toy-temple.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
-  <link href="css/about.css" rel="stylesheet">
+  <link href="css/art-page.css" rel="stylesheet">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
   <script src="js/menu.js" type="text/javascript"></script>
@@ -32,33 +32,53 @@
 <body>
   <div id="header">
     <div id="logo">
-      <h1><a href="index.html">Kathleen Oum</a></h1>
+      <h1><a href="/">Kathleen Oum</a></h1>
       <h2>Graphic &amp; Motion Design</h2>
     </div>
     <div id="menu">
       <div id="menu-hamburger" class="menu-closed">
         <img src="img/bar_menu.svg" alt="menu">
       </div>
-      <div id="menu-links">
-        <span><a href="index.html">Portfolio</a></span>
+      <nav id="menu-links">
+        <span><a href="/">Portfolio</a></span>
         <span><a target="_blank" href="https://drive.google.com/file/d/1irmmwqjdb_iXT6rve7aoKs-2bKsjp2nm/view">Resume</a></span>
-        <span><a class="active-link" href="about.html">About</a></span>
+        <span><a href="about.html">About</a></span>
         <span><a href="contact.html">Contact</a></span>
-      </div>
+      </nav>
     </div>
   </div>
 
   <div id="content">
-    <div id="about-content">
-      <div>
-        <img src="https://media.giphy.com/media/1fnXwFSw0wsRNqRTQk/source.gif">
+    <!-- Section 1 -->
+    <div class="art-section">
+      <div class="art-header">
+        <h2>Anime Expo - Toy Temple Booth</h2>
+        <p>Designed signage promoting the Toy Temple mystery boxes at their Anime Expo 2019 booth. Copy and POP illustrations were provided.</p>
+        <br>
       </div>
-      <div>
-          <h2>Hello, I'm Kathleen!</h2>
-          <p>I'm a multidisciplinary designer and 2D animator based in San Francisco with a love for art, animation, video games, and anime. I have experience in motion design, graphic design, advertisement, GIFs, and custom graphics packages for video with room to grow into new areas.  I love exploring ways design and art can connect brands with users and communities, as well as how it shapes our experiences with messages.</p>
-          <p>Outside of the office, I do remote work for clients ranging from YouTube gaming intros/outros, Twitch graphics, educational PSAs, logos, animated art, and videos. If it's in my skill range, I'll take it on!</p>
-          <p>In my free time, you can find me <s>staring at Reddit all day</s> playing Rocket League, attending anime conventions, buying merchandise of my favorite fandoms, and decorating my room with posters.</p>
+      <!--Signage-->
+      <div class="art-display">
+        <!-- Designs -->
+        <div class="quarter-image loading-icon">
+          <img src="https://78.media.tumblr.com/b8bcc754940c81d24f3a5a5d560e5513/tumblr_orm64lSyUY1vihf3to6_400.gif">
+        </div>
+        <div class="quarter-image loading-icon">
+          <img src="https://78.media.tumblr.com/10eb812640c78158a1d7f1ae8e221263/tumblr_orm64lSyUY1vihf3to5_400.gif">
+        </div>
+        <div class="quarter-image loading-icon">
+          <img src="https://78.media.tumblr.com/fc96a1d39ce485f7b4d8dceb1ee7abf8/tumblr_orm64lSyUY1vihf3to4_400.gif">
+        </div>
+        <div class="quarter-image loading-icon">
+          <img src="https://78.media.tumblr.com/68565cb798a26d2a61b23b28d310c83f/tumblr_orm64lSyUY1vihf3to3_400.gif">
+        </div>
+        <!-- Booth Pictures -->
+        <div class="full-image loading-icon">
+          <img src="https://78.media.tumblr.com/c629ea0f4910516eeda212eb31584fe1/tumblr_pcrrgnPlD51tmp8rdo2_r2_1280.png">
+        </div>
       </div>
+    </div>
+
+      <hr>
     </div>
   </div>
 
