--- a/endscreen.html
+++ b/endscreen.html
@@ -77,24 +77,13 @@
 
 
         <div class="art-sub-header">
-          <p>Select outro commissions done for YouTubers.</p>
+          <p>Final outro layouts that follow the YouTube safezones. Note: I did not animate the 3D IGN animation in the beginning.</p>
         </div>
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/wolf-outro_orig.gif">
         </div>
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/meilzbeauty-outro_orig.gif">
-        </div>
-        <!-- Row 6 -->
-        <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/lasean-outro_orig.gif">
-        </div>
-        <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/animated-gif-downsized-large-2_orig.gif">
-        </div>
-        <!-- Row 7 -->
-        <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/cyolism-outro_orig.gif">
         </div>
       </div>
       <hr>
