--- a/ads.html
+++ b/ads.html
@@ -77,13 +77,19 @@
         <div class="full-image loading-icon">
           <img src="https://66.media.tumblr.com/55d59c3d5c1b226da1f8ca86fe862a23/tumblr_pj19b9EUTD1tmp8rdo6_r1_1280.png">
         </div>
+        <!--Row 3-->
         <div class="full-image loading-icon">
           <img src="https://66.media.tumblr.com/2b3776f7b4991dcc9f6344275558d26e/tumblr_plgd0eA6Jw1tmp8rdo8_r1_1280.png">
         </div>
+        <!--Row 4-->
         <div class="full-image loading-icon">
           <img src="https://66.media.tumblr.com/e2f0d6a69200d895b17981031aec0a75/tumblr_pn73tiAN3l1tmp8rdo2_1280.png">
         </div>
         <!--Row 5-->
+        <div class="full-image loading-icon">
+          <img src="https://66.media.tumblr.com/0a6c9452b7437283b3ef8a2b347ceddb/tumblr_puhqxybCLc1tmp8rdo3_r1_1280.png">
+        </div>
+        <!--Row 6-->
         <div class="half-image loading-icon">
           <img src="https://66.media.tumblr.com/03398660a0ab4de3284296baa9cf4963/tumblr_pj17etb3MV1tmp8rdo7_r1_500.jpg">
         </div>
@@ -98,6 +104,13 @@
             <img src="https://66.media.tumblr.com/54bde8daf9500aed08e7e0921e63cdd6/tumblr_pj19b9EUTD1tmp8rdo7_r1_640.jpg">
           </div>
         <!--Row 7-->
+        <div class="half-image loading-icon">
+          <img src="https://66.media.tumblr.com/75f5e39c60f622dac9a4bffe3ec0fad9/tumblr_puhqxybCLc1tmp8rdo2_540.png">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://66.media.tumblr.com/217ae28cd0b407372a191674e17821e5/tumblr_puhqxybCLc1tmp8rdo1_1280.png">
+        </div>
+        <!--Row 8-->
         <div class="full-image loading-icon">
           <img src="https://66.media.tumblr.com/9d198db896a902158bcfce654198c6fe/tumblr_pj19b9EUTD1tmp8rdo4_r2_1280.jpg">
         </div>
