--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <div class="item">
       <a href="e3-booth.html">
         <div class="image-container loading-icon"><img src="https://media.giphy.com/media/XteMo3UVgqRgRIiUC2/giphy.gif" alt="e3 booth monitors"></div>
-        <span>Booth Monitors - IGN Live at E3</span>
+        <span>IGN Live at E3 - Booth Monitors</span>
       </a>
     </div>
 
@@ -132,6 +132,13 @@
         <a href="miniscroller.html">
           <div class="image-container loading-icon"><img src="https://66.media.tumblr.com/34894daaa0da6c23c82f7e632d6a8d9f/tumblr_piziu5dhLr1tmp8rdo7_r2_400.png" alt="motion manga"></div>
           <span>Miniscrollers</span>
+        </a>
+      </div>
+
+      <div class="item">
+        <a href="toy-temple.html">
+          <div class="image-container loading-icon"><img src="https://66.media.tumblr.com/78c173facbdc7f98f1aefc88c0fe8624/tumblr_pujwwcSWhZ1tmp8rdo5_r1_400.png" alt="motion manga"></div>
+          <span>Anime Expo - Toy Temple Booth</span>
         </a>
       </div>
       
