--- a/toy-temple.html
+++ b/toy-temple.html
@@ -53,27 +53,33 @@
     <div class="art-section">
       <div class="art-header">
         <h2>Anime Expo - Toy Temple Booth</h2>
-        <p>Designed signage promoting the Toy Temple mystery boxes at their Anime Expo 2019 booth. Copy and POP illustrations were provided.</p>
-        <br>
+        <p>Designed signage promoting the Toy Temple mystery boxes for their Anime Expo 2019 booth and future conventions. Copy and POP illustrations were provided.</p>
       </div>
       <!--Signage-->
       <div class="art-display">
         <!-- Designs -->
         <div class="quarter-image loading-icon">
-          <img src="https://78.media.tumblr.com/b8bcc754940c81d24f3a5a5d560e5513/tumblr_orm64lSyUY1vihf3to6_400.gif">
+          <img src="https://66.media.tumblr.com/6b7fbd217161186ed2f1184c9b16b553/tumblr_pujwwcSWhZ1tmp8rdo1_400.png">
         </div>
         <div class="quarter-image loading-icon">
-          <img src="https://78.media.tumblr.com/10eb812640c78158a1d7f1ae8e221263/tumblr_orm64lSyUY1vihf3to5_400.gif">
+          <img src="https://66.media.tumblr.com/98835cce49a55e68c8c59a6a945fb485/tumblr_pujwwcSWhZ1tmp8rdo2_400.png">
         </div>
         <div class="quarter-image loading-icon">
-          <img src="https://78.media.tumblr.com/fc96a1d39ce485f7b4d8dceb1ee7abf8/tumblr_orm64lSyUY1vihf3to4_400.gif">
+          <img src="https://66.media.tumblr.com/989e81c131545d1cf505e66bc870194a/tumblr_pujwwcSWhZ1tmp8rdo3_400.png">
         </div>
         <div class="quarter-image loading-icon">
-          <img src="https://78.media.tumblr.com/68565cb798a26d2a61b23b28d310c83f/tumblr_orm64lSyUY1vihf3to3_400.gif">
+          <img src="https://66.media.tumblr.com/cd0bcf40df76b2d8877165ce874a5052/tumblr_pujwwcSWhZ1tmp8rdo4_400.png">
         </div>
+        <br>
         <!-- Booth Pictures -->
+        <div class="half-image loading-icon">
+          <img src="https://66.media.tumblr.com/2c8569bcc17d3f03ba08591423fe28e4/tumblr_puhqxybCLc1tmp8rdo8_r2_1280.png">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://66.media.tumblr.com/1419cb69c81e49a78926c272b98076ee/tumblr_puhqxybCLc1tmp8rdo9_r2_1280.png">
+        </div>
         <div class="full-image loading-icon">
-          <img src="https://78.media.tumblr.com/c629ea0f4910516eeda212eb31584fe1/tumblr_pcrrgnPlD51tmp8rdo2_r2_1280.png">
+          <img src="https://66.media.tumblr.com/017da8a9d73093569ea5c979d5f2f933/tumblr_puhqxybCLc1tmp8rdo10_r3_1280.png">
         </div>
       </div>
     </div>
