--- a/antman.html
+++ b/antman.html
@@ -116,10 +116,10 @@
           <p>Animated the branded snipes that appear for a few seconds on the cams </p>
         </div>
         <div class="half-image loading-icon">
-          <img src="https://puu.sh/B3Jag/9af428f1e2.gif">
+          <img src="https://media.giphy.com/media/WOI0txVkZaK9WkycqA/source.gif">
         </div>
         <div class="half-image loading-icon">
-          <img src="https://puu.sh/B3Jbb/159a874bc8.gif">
+          <img src="https://media.giphy.com/media/l4dtIrX03rnHDFPEUw/source.gif">
         </div>
       </div>
       <hr>
