--- a/endscreen.html
+++ b/endscreen.html
@@ -53,37 +53,48 @@
     <div class="art-section">
       <div class="art-header">
         <h2>IGN YouTube End Screens</h2>
-        <p>Working with Video and Product Design, we wanted to come up with two new youTube screens: one that had the footage taking up half the screen, and another where the footage was in the corner.</p>
+        <p>Working with Video and Product Design, we wanted to come up with two new YouTube screens: one that had the footage taking up half the screen, and another where the footage was in the corner.</p>
       </div>
       <div class="art-display">
         <h2>Initial Explorations</h2>
-        <p>I started off with using IGN's brand colors and then trailing off into other colors.  This project was open ended at the beginning so I wanted (and was given permission) to explore different looks and colors not typically part of the IGN brand. Below were some quick drafts to get ideas going:</p>
-        <!-- Corner -->
-        <div class="half-image loading-icon">
+        <p>This project was open ended at the beginning so I wanted (and was given permission) to explore different looks and colors not typically part of the IGN brand. Below were some quick drafts to get ideas going:</p>
+        <!-- Half -->
+          <div class="half-image loading-icon">
+            <img src="https://media.giphy.com/media/W6pXHKSWjHJPGlm6AB/source.gif">
+          </div>
+          <div class="half-image loading-icon">
+            <img src="https://media.giphy.com/media/UttxWzKKe72gifZXXd/source.gif">
+          </div> 
+          <div class="half-image loading-icon">
+              <img src="https://media.giphy.com/media/XyPSrfGrXHzVoiwQUv/source.gif">
+            </div>
+          <!-- Corner -->
+          <div class="half-image loading-icon">
           <img src="https://media.giphy.com/media/fshN6FSEwJwcWT3SVo/source.gif">
-        </div>
-        <div class="half-image loading-icon">
-          <img src="https://media.giphy.com/media/fS586wubJDRyiekU0s/source.gif">
-        </div>
+          </div>
         <div class="half-image loading-icon">
           <img src="https://media.giphy.com/media/ZZlZjauQw9s6qKVa6U/source.gif">
         </div>
         <div class="half-image loading-icon">
+            <img src="https://media.giphy.com/media/fS586wubJDRyiekU0s/source.gif">
+          </div>
+        <div class="half-image loading-icon">
           <img src="https://media.giphy.com/media/Q5EwAn2tRjzGd1FPLh/source.gif">
         </div>
         <div class="half-image loading-icon">
-            <img src="https://media.giphy.com/media/MXjPLwz55qtMx8zSIs/source.gif">
-          </div>
+          <img src="https://media.giphy.com/media/MXjPLwz55qtMx8zSIs/source.gif">
+        </div>
 
 
         <div class="art-sub-header">
+            <h2>Final Draft</h2>
           <p>Final outro layouts that follow the YouTube safezones. Note: I did not animate the 3D IGN animation in the beginning.</p>
         </div>
         <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/wolf-outro_orig.gif">
+          <img src="https://media.giphy.com/media/hrSFWQ0ib5iQToqw1P/source.gif">
         </div>
         <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/meilzbeauty-outro_orig.gif">
+          <img src="https://media.giphy.com/media/j3mj6RgQPhZAsKYJwy/source.gif">
         </div>
       </div>
       <hr>
