--- a/index.html
+++ b/index.html
@@ -128,19 +128,28 @@
       </div>
 
      <!-- Row 5 -->
+
+     <div class="item">
+      <a href="endscreen.html">
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/YPyRtgL1VgSAMIXw5e/source.gif" alt="endscreen"></div>
+        <span>IGN's New YouTube End Screens</span>
+      </a>
+    </div>
+
      <div class="item">
         <a href="miniscroller.html">
-          <div class="image-container loading-icon"><img src="https://66.media.tumblr.com/34894daaa0da6c23c82f7e632d6a8d9f/tumblr_piziu5dhLr1tmp8rdo7_r2_400.png" alt="motion manga"></div>
+          <div class="image-container loading-icon"><img src="https://66.media.tumblr.com/34894daaa0da6c23c82f7e632d6a8d9f/tumblr_piziu5dhLr1tmp8rdo7_r2_400.png" alt="miniscroller"></div>
           <span>Miniscrollers</span>
         </a>
       </div>
 
       <div class="item">
         <a href="toy-temple.html">
-          <div class="image-container loading-icon"><img src="https://66.media.tumblr.com/78c173facbdc7f98f1aefc88c0fe8624/tumblr_pujwwcSWhZ1tmp8rdo5_r1_400.png" alt="motion manga"></div>
+          <div class="image-container loading-icon"><img src="https://66.media.tumblr.com/78c173facbdc7f98f1aefc88c0fe8624/tumblr_pujwwcSWhZ1tmp8rdo5_r1_400.png" alt="toy temple"></div>
           <span>Anime Expo - Toy Temple Booth</span>
         </a>
       </div>
+
       
 
 
