--- a/strive-for-five.html
+++ b/strive-for-five.html
@@ -88,7 +88,7 @@
         </div>
         <div class="full-image loading-icon">
           <video width="100%" autoplay muted loop>
-            <source src="https://puu.sh/CWDI8/089718f154.mp4" type="video/mp4">
+            <source src="https://puu.sh/DU5lJ/5bd67a4a7c.mp4" type="video/mp4">
           </video>
         </div>
         <!-- Row 3 -->
