--- a/behind-the-cosplay.html
+++ b/behind-the-cosplay.html
@@ -84,7 +84,7 @@
           <p>Logo animation based on the idea of stitching cosplay together, and so the words sort of 'stitch' or manifest to convey that theme. Logo/title was designed by Matt Kruse.</p>
         </div>
         <div class="full-image loading-icon">
-          <img src="https://puu.sh/C8fYq/b34e98ad32.gif">
+          <img src="https://media.giphy.com/media/Ypx2jP9O3cFhB5iRpi/source.gif">
         </div>
         <!-- Row 2 -->
         <div class="art-sub-header">
@@ -100,14 +100,14 @@
           <p>Animated the co-branded snipe that appears at the bottom of the videos.</p>
         </div>
         <div class="full-image loading-icon">
-          <img src="https://puu.sh/C8eqb.gif">
+          <img src="https://media.giphy.com/media/SqrkrL81e0GdGWWJym/source.gif">
         </div>
         <!-- Row 4 -->
         <div class="art-sub-header">
           <p>Animated lower third video asset that was templatized for Video Team's usage.</p>
         </div>
         <div class="full-image loading-icon">
-          <img src="https://puu.sh/CWHno/dbf08e4a4d.gif">
+          <img src="https://media.giphy.com/media/S9uMW2YbGt2fnpsNPW/source.gif">
         </div>
       </div>
       <hr>
