--- a/youtube.html
+++ b/youtube.html
@@ -87,6 +87,9 @@
         </div>
         <!-- Row 5 -->
         <div class="half-image loading-icon">
+          <img src="https://media.giphy.com/media/YP2UvaTRT2oUaz8HnR/source.gif">
+        </div>
+        <div class="half-image loading-icon">
           <img src="https://66.media.tumblr.com/3b297911a362f27f4ce7020aea910304/tumblr_pmffnpw9Yx1vihf3to1_540.gif">
         </div>
 
@@ -108,6 +111,9 @@
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/animated-gif-downsized-large-2_orig.gif">
         </div>
         <!-- Row 7 -->
+        <div class="half-image loading-icon">
+          <img src="https://media.giphy.com/media/YP2UvaTRT2oUaz8HnR/source.gif">
+        </div>
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/cyolism-outro_orig.gif">
         </div>
