--- a/youtube.html
+++ b/youtube.html
@@ -53,7 +53,7 @@
     <div class="art-section">
       <div class="art-header">
         <h2>YouTube Gaming Commissions</h2>
-        <p>Select intro commissions done for YouTubers.
+        <p>Select intro commissions done for gaming YouTubers.
           Static character art was provided by clients with permission to animate.</p>
       </div>
       <div class="art-display">
