--- a/anime-omake.html
+++ b/anime-omake.html
@@ -230,11 +230,11 @@
           <p>Graphics for the Anime Omake show page and web graphics.</p>
         </div>
         <div></div>
-        <div class="half-image loading-icon">
+        <div class="full-image loading-icon">
           <img src="https://66.media.tumblr.com/e1b6cb0b0b836714b7d752e566d005af/tumblr_pujwwcSWhZ1tmp8rdo8_r1_1280.jpg">
         </div>
         <!-- Row 13 -->
-        <div class="full-image loading-icon">
+        <div class="full-image">
           <img src="https://66.media.tumblr.com/d4341b792493ef3ef467417a9e474e1e/tumblr_pujwwcSWhZ1tmp8rdo7_r1_1280.png">
         </div>
       </div>
