--- a/anime-omake.html
+++ b/anime-omake.html
@@ -231,9 +231,9 @@
         </div>
         <div></div>
         <div class="full-image loading-icon">
-          <img src="https://66.media.tumblr.com/e56091c3fa3e55e490402457f1dabdd2/tumblr_pujwwcSWhZ1tmp8rdo8_r2_1280.jpg">
+          <img src="https://66.media.tumblr.com/7f99370fd6cd26b14f4864dfc0935164/tumblr_pujwwcSWhZ1tmp8rdo8_r3_1280.jpg">
         </div>
-        <!-- Row 13 -->
+        <!-- PVP -->
         <div class="full-image">
           <img src="https://66.media.tumblr.com/d4341b792493ef3ef467417a9e474e1e/tumblr_pujwwcSWhZ1tmp8rdo7_r1_1280.png">
         </div>
