--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -56,7 +56,7 @@
           <p>Animated and designed video graphics for IGN's rebooted <b>Up at Noon</b>, a weekly pop culture variety show hosted by Brian Altano and Max Scoville. </p>
           <p>-</p>
           <p>Logo design and art direction: Justin Vachon</p>
-          <p>Animation and video graphics: Kathleen Oum</p>
+          <p>Animation and video graphics design: Kathleen Oum</p>
           <p>Animation support: Jack Taylor</p>
           <p>-</p>
           <p>Watch an episode below:</p>
@@ -102,7 +102,7 @@
         <!-- Lower Thirds -->
         <h2>Lower Thirds, Upper Thirds, and Namebars</h2>
         <div class="art-sub-header">
-          <p>Customizable lower and upper thirds were needed for easy use by the Video Team.  This involved me animating it in after Effects and then preparing the lower thirds as responsive .MOGRT templates for Premiere Pro use.</p>
+          <p>Customizable lower and upper thirds were needed for easy use by the Video Team.  This involved me animating it in After Effects and then preparing the lower thirds as time responsive .MOGRT templates for Premiere Pro use.</p>
         </div>
         <div class="full-image loading-icon">
           <img src="https://i.imgur.com/0vhWQlf.png">
@@ -122,7 +122,7 @@
         <div class="art-section">
         <h2>Snipe</h2>
         <div class="art-sub-header">
-          <p>Put together the snipe for future sponsored segments where a sponsor would need to be shown.</p>
+          <p>Designed the snipe for future sponsored segments where a sponsor would need to be shown.</p>
         </div>
         <div class="full-image loading-icon">
           <img src="https://i.imgur.com/JnVCCdh.png"></div>
