--- a/youtube.html
+++ b/youtube.html
@@ -69,14 +69,14 @@
           <img src="https://media.giphy.com/media/4H1AvX2Z3bnmPH9laD/giphy.gif">
         </div>
         <div class="half-image loading-icon">
-          <img src="https://media.giphy.com/media/9DruQECt28WbK5iIpa/giphy.gif">
+          <img src="https://media.giphy.com/media/TJm06K5LOAkzmCAihc/source.gif">
         </div>
         <!-- Row 3 -->
         <div class="half-image loading-icon">
-          <img src="https://media.giphy.com/media/TJm06K5LOAkzmCAihc/source.gif">
+          <img src="https://media.giphy.com/media/k72Phd9MkDVDmobRtr/giphy.gif">
         </div>
         <div class="half-image loading-icon">
-          <img src="https://media.giphy.com/media/k72Phd9MkDVDmobRtr/giphy.gif">
+          <img src="https://66.media.tumblr.com/c5ccb1bc950e6742a756f89b77a313ac/tumblr_pv276yUUUh1vihf3to1_540.gif">
         </div>
         <!-- Row 4 -->
         <div class="half-image loading-icon">
@@ -91,6 +91,9 @@
         </div>
         <div class="half-image loading-icon">
           <img src="https://66.media.tumblr.com/3b297911a362f27f4ce7020aea910304/tumblr_pmffnpw9Yx1vihf3to1_540.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://media.giphy.com/media/9DruQECt28WbK5iIpa/giphy.gif">
         </div>
 
 
