--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -73,31 +73,35 @@
     <div class="art-section">
         <h2>Intro</h2>
       <div class="art-display">
-        <!-- Row 1 -->
+        <!-- Intro -->
         <div class="art-sub-header">
-          <p>Once the finalized logo was created by Justin Vachon, I was given direction to make an intro that was 90s-Nickolodeon-meets-modern inspired with Double Dare and slime being the main influence. I used the paint splatter in the logo as my main source of inspiration for my first intro draft. </p>
+          <p>Once the finalized logo was created by Justin Vachon, I was given direction to make an intro that was 90s-Nickolodeon-meets-modern inspired with Double Dare and slime being the main influence. I used the paint splatter in the logo as my main source of inspiration for choosing background colors and shapes, opening animations, and logo animations.</p>
         </div>
         <div class="full-image loading-icon">
           <img src="https://i.imgur.com/Nl876Vf.png">
         </div>
-        <p>After feedback, motion blur, staggering, and touch ups to the logo aniamtion was added to create this finalized intro. </p>
-        <div class="full-image loading-icon">
-                <img src="https://i.imgur.com/Nl876Vf.png">
-              </div></div>
+        <p>After feedback, motion blur, staggering, and touch ups to the logo animation was added to create this finalized intro. </p>
+        <video width="100%" autoplay muted loop>
+          <source src="https://puu.sh/DWz1D/f6e899b792.mp4" type="video/mp4">
+        </video></div>
 
 
-        <!-- Row 2 -->
+        <!-- Transitions -->
         <div class="art-section">
         <h2>Transitions</h2>
         <div class="art-sub-header">
           <p>Early transition drafts focused on the paint splatters covering the screen, but it was narrowed down to multicolored triangles from the logo and a wipe over the abstract memphis background from the intro.</p>
         </div>
         <div class="full-image loading-icon">
-          <img src="https://i.imgur.com/JnVCCdh.png">
+          <img src="https://media.giphy.com/media/U3yt6n8qCg4WwkQG1o/source.gif">
         </div>
+        <video width="100%" autoplay muted loop>
+          <source src="https://puu.sh/DWyWe/7cd8fca26d.mp4" type="video/mp4">
+        </video>
           <div class="full-image loading-icon">
-          <img src="https://i.imgur.com/IFniawt.png">
+          <img src="https://media.giphy.com/media/iDmFE3gwC6PBFAyUaS/source.gif">
         </div></div>
+
 
         <!-- Lower Thirds -->
         <h2>Lower Thirds, Upper Thirds, and Namebars</h2>
@@ -105,18 +109,19 @@
           <p>Customizable lower and upper thirds were needed for easy use by the Video Team.  This involved me animating it in After Effects and then preparing the lower thirds as time responsive .MOGRT templates for Premiere Pro use.</p>
         </div>
         <div class="full-image loading-icon">
-          <img src="https://i.imgur.com/0vhWQlf.png">
+          <img src="https://media.giphy.com/media/W30U221RorPJVDypsY/source.gif">
         </div>
-        <div class="full-image loading-icon">
-          <img src="https://i.imgur.com/0vhWQlf.png">
-        </div>
+        <video width="100%" autoplay muted loop>
+          <source src="https://puu.sh/DWzxV/33b8b591b4.mp4" type="video/mp4">
+        </video>
          <!-- Row 4 -->
          <div class="art-sub-header">
           <p>Multiple name bars were created for use with up to 4 hosts.  These namebars were templatized so that the video editor(s) could toggle on and off up to 4 namebars.</p>
         </div>
         <div class="full-image loading-icon">
-          <img src="https://i.imgur.com/mdRDZaZ.jpg">
-      </div></div>
+          <img src="https://i.imgur.com/0vhWQlf.png">
+        </div>
+    </div>
 
         <!-- Snipe -->
         <div class="art-section">
@@ -125,7 +130,7 @@
           <p>Designed the snipe for future sponsored segments where a sponsor would need to be shown.</p>
         </div>
         <div class="full-image loading-icon">
-          <img src="https://i.imgur.com/JnVCCdh.png"></div>
+          <img src="https://media.giphy.com/media/ZB3MWMb0xs0oUvmaW6/source.gif"></div>
 
 
         <!-- End Cards -->
@@ -135,10 +140,10 @@
           <p>End card for the sizzle and an end card for the regular episodes.</p>
         </div>
         <div class="full-image loading-icon">
-          <img src="https://i.imgur.com/JnVCCdh.png">
+          <img src="https://media.giphy.com/media/Vh9KobXeRXTioOMEI4/source.gif">
         </div>
           <div class="full-image loading-icon">
-          <img src="https://i.imgur.com/IFniawt.png">
+          <img src="https://media.giphy.com/media/iG4f3YPCOVLndssqBL/source.gif">
         </div></div>
 
 
