--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -118,9 +118,9 @@
          <div class="art-sub-header">
           <p>Multiple name bars were created for use with up to 4 hosts.  These namebars were templatized so that the video editor(s) could toggle on and off up to 4 namebars.</p>
         </div>
-        <div class="full-image loading-icon">
-          <img src="https://i.imgur.com/0vhWQlf.png">
-        </div>
+        <video width="100%" autoplay muted loop>
+          <source src="https://puu.sh/DWYAL/20ff81b8ad.mp4" type="video/mp4">
+        </video>
     </div>
 
         <!-- Snipe -->
