--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -75,15 +75,16 @@
       <div class="art-display">
         <!-- Intro -->
         <div class="art-sub-header">
-          <p>Once the finalized logo was created by Justin Vachon, I was given direction to make an intro that was 90s-Nickolodeon-meets-modern inspired with Double Dare and slime being the main influence. I used the paint splatter in the logo as my main source of inspiration for choosing background colors and shapes, opening animations, and logo animations.</p>
-        </div>
-        <div class="full-image loading-icon">
-          <img src="https://i.imgur.com/Nl876Vf.png">
-        </div>
-        <p>After feedback, motion blur, staggering, and touch ups to the logo animation was added to create this finalized intro. </p>
+          <p>Once the finalized logo was created by Justin Vachon, I was given direction to make an intro that was 90s-Nickolodeon-meets-modern inspired with Double Dare and slime being the main influence. I used the paint splatter in the logo as my main source of inspiration for choosing background colors and shapes, opening animations, and logo animations.  Feedback was given to add motion blur and touch ups to the logo animation.</p>
+        
+          <br>
+          <p>Frame by frame paint splatter animation by Jack Taylor.</p>
+        
+        </div> 
         <video width="100%" autoplay muted loop>
           <source src="https://puu.sh/DWz1D/f6e899b792.mp4" type="video/mp4">
-        </video></div>
+        </video>
+      </div>
 
 
         <!-- Transitions -->
@@ -118,9 +119,9 @@
          <div class="art-sub-header">
           <p>Multiple name bars were created for use with up to 4 hosts.  These namebars were templatized so that the video editor(s) could toggle on and off up to 4 namebars.</p>
         </div>
-        <video width="100%" autoplay muted loop>
-          <source src="https://puu.sh/DWYAL/20ff81b8ad.mp4" type="video/mp4">
-        </video>
+        <div class="full-image loading-icon">
+          <img src="https://media.giphy.com/media/J6PBXI37f6XepZrNbH/source.gif">
+        </div>
     </div>
 
         <!-- Snipe -->
@@ -132,7 +133,7 @@
         <div class="full-image loading-icon">
           <img src="https://media.giphy.com/media/ZB3MWMb0xs0oUvmaW6/source.gif"></div>
 
-
+<br>
         <!-- End Cards -->
         <div class="art-section">
         <h2>End Cards</h2>
@@ -147,10 +148,8 @@
         </div></div>
 
 
-      <hr>
     </div>
 
-    <hr>
   </div>
 
   </div>
